add validator to the models, added loggers and updated swagger doc
