# docs/swagger.json
@@ -88,6 +88,10 @@
     "definitions": {
         "receiptProcessor_internal_models.Item": {
             "type": "object",
+            "required": [
+                "price",
+                "shortDescription"
+            ],
             "properties": {
                 "price": {
                     "type": "string",
@@ -108,9 +112,17 @@
         },
         "receiptProcessor_internal_models.Receipt": {
             "type": "object",
+            "required": [
+                "items",
+                "purchaseDate",
+                "purchaseTime",
+                "retailer",
+                "total"
+            ],
             "properties": {
                 "items": {
                     "type": "array",
+                    "minItems": 1,
                     "items": {
                         "$ref": "#/definitions/receiptProcessor_internal_models.Item"
                     }
